# Nepfluence

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00881e9e4edf_create_initial_tables_from_models.py  048a3f62b2c2_create_initial_tables_from_models.py  ade75bd5e219_create_initial_tables_from_models.py  fefa04d02bad_initial_migration_create_all_tables.py
backend/src/: config.py  database.py  logging_config.py  main.py  middleware.py
backend/src/campaign/: routes.py
backend/src/campaign_proposal/: routes.py
backend/src/users/: schema.py
