[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "fastapi[standard]>=0.136.1",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "greenlet>=3.5.0",
    "itsdangerous>=2.2.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-json-logger>=4.1.0",
    "sqlalchemy>=2.0.49",
]
